[package]
name = "sqlxrepro"
version = "0.1.0"
authors = ["Fredrik Bondza <fredrikbondza@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.5.0", features = [ "macros" ] }

[dependencies.sqlx]
version = "0.5.2"
default-features = false
features = [ "runtime-tokio-rustls", "macros", "chrono", "postgres", "uuid", "json" ]
